# loopforge

./: .gitignore  README.md  build_exe.py  install.ps1  main.py  pyproject.toml  uninstall.ps1
.github/workflows/: build.yml
src/loopforge/: __init__.py  cli.py  config.py
src/loopforge/commands/: batch.py  info.py  interactive.py  local.py  youtube.py
src/loopforge/models/: __init__.py
src/loopforge/services/: duration_service.py  ffmpeg_service.py  gpu_service.py  metadata_service.py  youtube_service.py
src/loopforge/utils/: logger.py  validator.py
tests/: test_duration.py  test_ffmpeg_service.py  test_validator.py
