[project]
name = "loopforge"
version = "1.0.0"
description = "CLI profesional untuk mengubah video pendek menjadi video berdurasi panjang dengan looping otomatis"
authors = [
    {name = "LoopForge", email = "dev@loopforge.app"}
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "yt-dlp>=2024.7.0",
    "opencv-python>=4.9.0",
    "pyinstaller>=6.20.0",
]

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["loopforge*"]

[project.scripts]
loopforge = "loopforge.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.pyinstaller]
python-version = "3.12"
console = true
onefile = true
name = "loopforge"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
